--- a/real-commerce/src/app/page.module.scss
+++ b/real-commerce/src/app/page.module.scss
@@ -18,13 +18,15 @@
 }
 
 .description {
-  display: inherit;
+  display: flex;
   justify-content: space-around;
-  align-items: inherit;
+  align-items: flex-start;
   font-size: 0.85rem;
-  width: 70%;
   z-index: 2;
   font-family: var(--font-mono);
+  width: 60vw;
+  min-height: max-content;
+  margin: 40px;
 }
 
 .description a {
@@ -32,15 +34,19 @@
   justify-content: center;
   align-items: center;
   gap: 0.5rem;
+  width: 60vw;
+  min-height: max-content;
 }
 
 .mainContainer {
   width: 70%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 
 .cityList {
   width: 30%;
-  height: 80vh;
   display: flex;
   align-items: flex-end;
 
