--- a/real-commerce/src/component/CityCard/CityCard.module.scss
+++ b/real-commerce/src/component/CityCard/CityCard.module.scss
@@ -1,5 +1,5 @@
 .li {
-  width: 50%;
+  width: inherit;
   list-style: none;
   position: relative;
   margin: 10px 0;
@@ -16,7 +16,7 @@
   .details {
     display: flex;
     justify-content: space-between;
-    width: 50%;
+    width: inherit;
   }
 }
 
@@ -25,8 +25,7 @@
   padding: 8px;
   border-radius: 8px;
   cursor: pointer;
-  align-self: flex-end;
-  margin-bottom: 10px;
+  height: fit-content;
 }
 
 .notFavorite {
